--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,9 @@ flutter:
     - assets/image/google_logo.png
     - assets/image/logo.png
     - assets/image/pataLogo.png
+    - assets/image/miniIconePata.png
+    - assets/image/gabriel.jpg
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
