--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,12 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   mask_text_input_formatter: ^2.9.0
+  bloc: ^9.0.0
+  dio: ^5.8.0+1
+  get_it: ^8.0.3
+  shared_preferences: ^2.5.3
+  sqflite: ^2.4.2
+  flutter_bloc: ^9.1.0
 
 dev_dependencies:
   flutter_test:
