implementação API cadastro

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+
+  mockito: ^5.4.5
+  build_runner: ^2.4.15
   
   flutter_localizations:
     sdk: flutter
