--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,11 @@ dependencies:
 
   mockito: ^5.4.5
   build_runner: ^2.4.15
-  
+  firebase_analytics: ^11.4.6
+  firebase_crashlytics: ^4.3.6
+  firebase_messaging: ^15.2.6
+
+
   flutter_localizations:
     sdk: flutter
   intl: ^0.19.0 
@@ -52,6 +56,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+    
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -59,6 +64,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
