--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   firebase_auth: ^5.5.4
   cloud_firestore: ^5.6.8
   google_fonts: ^6.2.1
+  google_sign_in: ^6.3.0
 
 dev_dependencies:
   flutter_test:
