--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,11 +58,20 @@ dependencies:
   google_fonts: ^6.2.1
   google_sign_in: ^6.3.0
   url_launcher: ^6.3.1
+  
+
+  
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-    
+  
+  flutter_launcher_icons: ^0.14.4
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icon/app_icon.png"  
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
